# unified-semantic-compressor

./: .gitignore  README.md  THEORY_AND_ROADMAP.md  conda-environment.yml  pyproject.toml  requirements.txt  v2_cohort_report.json  v2_cohort_report.md
docs/: ENTROPY_POLICY_LINKS.md  PLS_STYLE_DESCRIPTION_CHUNKED_IMAGES.md  V2_COHORT_REPORT.md  VIDEO_PIPELINE.md  v2_cohort_report.json
scripts/: query_db.py
tests/: benchmark_minimization_cohorts.py  benchmark_v2_cohorts.py  reconstitute_benchmark_outputs.py  run_integration_loop.py  test_astral_schema.py  test_library_documents.py  test_media_service.py  test_minimization_pipeline.py  test_nasa_ingestion.py  test_video_blip_cogvideox_integration.py  test_video_minimization_integration.py
unified_semantic_archiver/: __init__.py  __main__.py
unified_semantic_archiver/cli/: __init__.py  query_db.py
unified_semantic_archiver/compressors/: __init__.py  audio_compressor.py  data_compressor.py  library_compressor.py  ring_orchestrator.py  video_compressor.py
unified_semantic_archiver/db/: MIGRATION_entropy_ring.md  MIGRATION_tenant_id.md  SCHEMA_OWNERSHIP.md  __init__.py  continuum_db.py  schema.sql
unified_semantic_archiver/docs/: ENVIRONMENT_CONSIDERATIONS.md
unified_semantic_archiver/etl/: __init__.py  etl_pipeline.py  luigi.cfg  nasa_ingestion.py
unified_semantic_archiver/media/: __init__.py  service.py
unified_semantic_archiver/media/minimization/: __init__.py  adapter_requirements.py  cairn.py  loaders.py  models.py  pipeline.py  protocols.py  stages_default.py  types.py
unified_semantic_archiver/out_test/: script.txt
unified_semantic_archiver/research/: __init__.py  improvement_feed.py  unique_chunk_store.py  unique_kernel_store.py
unified_semantic_archiver/services/: __init__.py  cursor_call_service.py
